Fixed contributors & committers table align
git-svn-id: https://svn.apache.org/repos/asf/incubator/ignite/site/trunk@1673125 13f79535-47bb-0310-9956-ffa450edef68

--- a/scss/all.scss
+++ b/scss/all.scss
@@ -385,7 +385,7 @@ p {
             }
         }
         td:first-child{
-            padding-left: 58px;
+            padding-left: 38px;
         }
         .btn-video {
             color: $black;
